# Ufanet2

./: Dockerfile  config.yml  docker-compose.yml  docs.py  kafka_consumer.py  main.py  pdoc.py  pdoc_run.py  pyproject.toml  replica.sql  start_commands  storage.py  wait-for-kafka.sh
 docs/: index.html  kafka_consumer.html  main.html  search.js  storage.html
 docs/tests/: test_main.html
static/: style.css
templates/: index.html
tests/: test_main.py
