[project]
name = "fastapi-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asgi-lifespan>=2.1.0",
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "pdoc>=15.0.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
